--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
+html, body {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 #root {
   max-width: 1280px;
 }
